[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = {version = "1.7.2"}
clap = { version = "4.5.20", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
hickory-resolver = "0.24.1"
http = "1.1.0"
humantime-serde = "1.1.1"
log = {version = "0.4.22", features = ["kv"]}
matchit = "0.8.4"
once_cell = "1.20.2"
pingora = { version = "0.3.0", features = ["lb", "openssl"] }
pingora-limits = "0.3.0"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
serde_yaml = "0.9.34"
snafu = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
