[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
bytes = {version = "1.9.0"}
clap = { version = "4.5.26", features = ["derive"] }
config = { version = "0.15.5", default-features = false, features = ["yaml"] }
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
hickory-resolver = "0.24.2"
http = "1.2.0"
humantime-serde = "1.1.1"
log = {version = "0.4.25", features = ["kv"]}
matchit = "0.8.6"
once_cell = "1.20.2"
pingora = { version = "0.4.0", features = ["lb", "openssl"] }
pingora-limits = "0.4.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
serde_yaml = "0.9.34"
snafu = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
